fix: improve RegistrationForm spacing

--- a/src/pages/RegistrationPage/RegistrationPage.module.scss
+++ b/src/pages/RegistrationPage/RegistrationPage.module.scss
@@ -5,7 +5,7 @@
 
 .textInput {
   &:not(:last-child) {
-    margin-bottom: 8px;
+    margin-bottom: 11px;
   }
 }
 
